@@ -1,5 +1,8 @@
 2013-03-08  Ulrich Müller  <ulm@gentoo.org>
 
+	* Makefile (dist): Use xz for compression.
+	(clean): Also remove *.xz.
+
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated
 	from eclasses.
 
